--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvel Website</title>
+    <title>Frederick Marvel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>hi</h1>
+<body style="background-color: rgb(13, 0, 128);">
+    <div class="header">
+        <h1 class="judul">Marvel.</h1>
+    </div>
+
+    <div class="body">
+ 
+    </div>
+
+    <div class="footer">
+
+    </div>
+
 </body>
 </html>
