--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Frederick Marvel</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: rgb(13, 0, 128);">
+<body style="background-color: rgb(10, 0, 102);">
     <div class="header">
-        <h1 class="judul">Marvel.</h1>
+        <span class="nama">Marvel.</span>
+        <span class="about">About</span>
+        <span class="projects">Projects</span>
+        <span class="contacts">Contact</span>
     </div>
 
     <div class="body">
